force-app/main/default/objects/c23_Experience_Content_Config__mdt/c23_Experience_Content_Config__mdt.object-meta.xml
<CustomObject>
    <description>Config-driven content for Experience Cloud announcement, CTA, and hero components.</description>
    <label>Experience Content Config</label>
    <pluralLabel>Experience Content Configs</pluralLabel>
</CustomObject>