force-app/main/default/objects/c23_Experience_Content_Config__mdt/fields/c23_Audience__c.field-meta.xml
<CustomField>
    <fullName>c23_Audience__c</fullName>
    <label>Audience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>All</fullName><default>true</default><label>All</label></value>
            <value><fullName>Guest</fullName><default>false</default><label>Guest</label></value>
            <value><fullName>Authenticated</fullName><default>false</default><label>Authenticated</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>