force-app/main/default/objects/c23_Experience_Content_Config__mdt/fields/c23_ContentType__c.field-meta.xml
<CustomField>
    <fullName>c23_ContentType__c</fullName>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Announcement</fullName><default>false</default><label>Announcement</label></value>
            <value><fullName>CTA</fullName><default>false</default><label>CTA</label></value>
            <value><fullName>Hero</fullName><default>false</default><label>Hero</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>