force-app/main/default/objects/c23_Experience_Content_Config__mdt/fields/c23_EndAt__c.field-meta.xml
<CustomField>
    <fullName>c23_EndAt__c</fullName>
    <label>EndAt</label>
    <type>DateTime</type>
</CustomField>