force-app/main/default/objects/c23_Experience_Content_Config__mdt/fields/c23_ImageUrl__c.field-meta.xml
<CustomField>
    <fullName>c23_ImageUrl__c</fullName>
    <label>ImageUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>