force-app/main/default/objects/c23_Experience_Content_Config__mdt/fields/c23_IsActive__c.field-meta.xml
<CustomField>
    <fullName>c23_IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>