force-app/main/default/objects/c23_Experience_Content_Config__mdt/fields/c23_Message__c.field-meta.xml
<CustomField>
    <fullName>c23_Message__c</fullName>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>