force-app/main/default/objects/c23_Experience_Content_Config__mdt/fields/c23_PrimaryUrl__c.field-meta.xml
<CustomField>
    <fullName>c23_PrimaryUrl__c</fullName>
    <label>PrimaryUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>