force-app/main/default/objects/c23_Experience_Content_Config__mdt/fields/c23_Priority__c.field-meta.xml
<CustomField>
    <fullName>c23_Priority__c</fullName>
    <label>Priority</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>