force-app/main/default/objects/c23_Experience_Content_Config__mdt/fields/c23_StartAt__c.field-meta.xml
<CustomField>
    <fullName>c23_StartAt__c</fullName>
    <label>StartAt</label>
    <type>DateTime</type>
</CustomField>